--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: deeppink;
 }
+header {
+    background-color: deepskyblue;
+    border-color: dimgray;
+}
